<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/related_links"
        android:textColor="@color/colorAccent"
        android:padding="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/ic_chevron_right"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiki"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comic_link"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        />
</LinearLayout>
