<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comics"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:id="@+id/comic_text"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/comic_recycler"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serise"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:id="@+id/series_text"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/serise_recycler"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:id="@+id/stories_text"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/stories_recycler"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:id="@+id/events_text"
        android:visibility="gone"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/events_recycler"/>
</LinearLayout>
